--- a/LoanData.ipynb
+++ b/LoanData.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accf6305",
+   "id": "ce9aca93",
    "metadata": {},
    "source": [
     "#### Model uses Random Forest for prediction"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc4dbced",
+   "id": "7c6e4460",
    "metadata": {},
    "source": [
     "### 1. Data Description"
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae400a10",
+   "id": "8c7730a6",
    "metadata": {},
    "source": [
     "### 2. Required Libraries"
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90352216",
+   "id": "f3774425",
    "metadata": {},
    "source": [
     "### 3. Data Acquisition"
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d953ce75",
+   "id": "b1d93689",
    "metadata": {},
    "source": [
     "Key Observations:\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12cd03e0",
+   "id": "ceeb0bea",
    "metadata": {},
    "source": [
     "### 4. Data Analysis"
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72efde88",
+   "id": "a589b3b0",
    "metadata": {},
    "source": [
     "Most of the loans are applied for debt consolidation"
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf7e87d1",
+   "id": "9c8cf8c2",
    "metadata": {},
    "source": [
     "Most of the customer's fico score lies between 670 - 710 and interest rate between 12 - 14%"
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a90f0805",
+   "id": "ebe31769",
    "metadata": {},
    "source": [
     "### 5. Model Creation and Evaluation"
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "229525eb",
+   "id": "e9691ca3",
    "metadata": {},
    "source": [
     "Test accuracy: 97.45%"
@@ -1072,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "faf027b3",
+   "id": "60e05ac7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5819f1af",
+   "id": "9022b7db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9cdc2513",
+   "id": "53f8eb5e",
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f87bee11",
+   "id": "a417d2ec",
    "metadata": {},
    "source": [
     "Train accuracy: 100%"
@@ -1120,10 +1120,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7ec5b3a",
+   "id": "83c00afe",
    "metadata": {},
    "source": [
-    "Here test accuracy is 97.45% which is good. Parameter tuning is not required. Even though we try parameter tuning (finding optimum n_estimeters) output will not differ noticably"
+    "Here test accuracy is 97.45% which is good. Parameter tuning is not required. Even though we try parameter tuning (finding optimum n_estimeters) output will not differ noticably. Try below code to check yourself!!"
    ]
   },
   {
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bf58020",
+   "id": "a5ceebbc",
    "metadata": {},
    "source": [
     "After optimization, accuracy is 97.6% and is almost similar as before"
@@ -1265,7 +1265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c064d8c5",
+   "id": "4a4a7380",
    "metadata": {},
    "outputs": [],
    "source": []
